--- a/app/src/main/res/drawable/rectangle.xml
+++ b/app/src/main/res/drawable/rectangle.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="2dp"
-        android:color="@android:color/black" />
+        android:color="@android:color/holo_red_dark" />
     <solid android:color="@android:color/transparent" />
 
 </shape>
